tests/ui/compile-fail/pin_data/pin_data_but_drop.stderr
error[E0119]: conflicting implementations of trait `_::MustNotImplDrop` for type `Foo`
 --> tests/ui/compile-fail/pin_data/pin_data_but_drop.rs:3:1
  |
3 | #[pin_data]
  | ^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `Foo`
  |
  = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `_::MustNotImplDrop` for type `Bar`
  --> tests/ui/compile-fail/pin_data/pin_data_but_drop.rs:12:1
   |
12 | #[pin_data]
   | ^^^^^^^^^^^
   | |
   | first implementation here
   | conflicting implementation for `Bar`
   |
   = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
